[package]
name = "libsml-rs"
version = "0.1.0"
edition = "2021"
authors = ["linuskmr <linuskmr.dev@gmail.com>"]
description = "High-level bindings to the libsml library"
keywords = ["libsml", "smart-message-language"]
license = "GPL-3.0"
repository = "https://github.com/linuskmr/libsml-rs"

[dependencies]
libsml-sys = { path = "../libsml-sys" }
