[package]
name = "libsml-sys"
version = "0.1.1"
edition = "2021"
authors = ["linuskmr <linuskmr.dev@gmail.com>"]
description = "Low-level bindings to the system libsml library"
keywords = ["libsml", "sml", "smart-meter"]
license = "GPL-3.0"
repository = "https://github.com/linuskmr/libsml-rs"
links = "sml"

[build-dependencies]
bindgen = "0.71.1"